--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,11 @@ Cargo.lock
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+
+# .sav files and .json files
+*.sav
+*.json
+
+# idea
+.idea/
+*.iml
