--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = { version = "1.0.72", features = ["backtrace"] }
 byteorder = "1.4.3"
-flate2 = "1.0.26"
+crc32fast = "1.3.2"
+flate2 = { version = "1.0.26" }
 serde = { version = "1.0.182", features = ["derive"] }
 serde_json = "1.0.104"
